# rustman-cli-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  justfile
src/: cli.rs  common.rs  gui.rs  gui_plot_extensions.rs  main.rs  plot.rs  transformations.rs  utils.rs
src/spe_rs/: mod.rs  spe_data.rs  xml.rs
src/transformations/: align.rs  append.rs  average.rs  baseline.rs  calibration.rs  count_conversion.rs  despike.rs  draw_baseline.rs  finning.rs  integrate.rs  mask_pixels.rs  normalize.rs  offset.rs  reshape.rs  select.rs  shift.rs  subtract.rs
test/: frames_unstable.csv  test_frames.csv  test_frames_misaligned_processed.csv  test_frames_out.csv  test_frames_processed.csv  test_frames_reshaped.csv  test_frames_simple.csv  test_sm.csv  test_watch.csv
